@@ -32,9 +32,6 @@ enum { NONE=0, CLOSE, TOGGLE, ICONIFY, SHADE, TOGGLE_ICONIFY, MAXIMIZE_RESTORE, 
 
 #define ALLDESKTOP  0xFFFFFFFF
 
-#define MIN3(x,y,z)  ((y) <= (z) ? ((x) <= (y) ? (x) : (y)) : ((x) <= (z) ? (x) : (z)))
-#define MAX3(x,y,z)  ((y) >= (z) ? ((x) >= (y) ? (x) : (y)) : ((x) >= (z) ? (x) : (z)))
-
 
 typedef struct config_border
 {
@@ -51,6 +48,9 @@ typedef struct config_color
    double alpha;
 } config_color;
 
+
+// adjust HSB on an ARGB icon
+void adjust_hsb(unsigned int *data, int w, int h, float hue, float satur, float bright);
 
 
 
